# terminal-shapes

./: CMakeLists.txt
src/: main.cpp  tslib.cpp  tslib.hpp
src/cube/: cube.cpp  cube.hpp
src/vertex/: vertex.cpp  vertex.hpp
